RESOLVED FIXED144418
UI process sometimes crashes under _takeViewSnapshot when the window is off-screen
https://bugs.webkit.org/show_bug.cgi?id=144418
Summary UI process sometimes crashes under _takeViewSnapshot when the window is off-s...
Tim Horton
Reported 2015-04-29 16:03:31 PDT
Created attachment 252000 [details] null-checks If the window is off-screen, we can't snapshot it.
Attachments
null-checks (2.12 KB, patch)
2015-04-29 16:03 PDT, Tim Horton
ap: review+
Tim Horton
Comment 1 2015-04-29 16:03:39 PDT
WebKit Commit Bot
Comment 2 2015-04-29 16:05:10 PDT
Attachment 252000 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2015-04-29 16:09:39 PDT
Comment on attachment 252000 [details] null-checks View in context: https://bugs.webkit.org/attachment.cgi?id=252000&action=review > Source/WebKit2/ChangeLog:4 > + Need the bug URL (OOPS!). No?
Tim Horton
Comment 4 2015-04-29 16:21:24 PDT
Note You need to log in before you can comment on or make changes to this bug.