UI process sometimes crashes under _takeViewSnapshot when the window is off-screen https://bugs.webkit.org/show_bug.cgi?id=144418 <rdar://problem/20740278>

Reviewed by Alexey Proskuryakov.

* UIProcess/API/mac/WKView.mm:
(-[WKView _takeViewSnapshot]):
Null-check the array before checking if it has any items.
If the window is off-screen, we can't snapshot it.


Canonical link: https://commits.webkit.org/162428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183588 268f45cc-cd09-0410-ab3c-d52691b4dbfc